kqed_dev4/src/objects/SourceCodeConfig__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name CPRT</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Technique__c</fullName>
        <label>Channel (Technique)</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Char11__c</fullName>
        <label>11th Char</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Char12__c</fullName>
        <label>12th Char</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Char1__c</fullName>
        <label>1st Char</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Field__c</fullName>
        <label>From Field</label>
        <picklist>
            <picklistValues>
                <fullName>Effort</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Start DateTime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Giving_Segment__c</fullName>
        <label>Giving Segment</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hundred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Contributions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Program__c</fullName>
        <label>Product/Program</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Solicitation_Type__c</fullName>
        <label>Solicitation Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>KCRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sub_Channel__c</fullName>
        <label>Sub Channel</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCTV Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-Sites (Landing Pages)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Per Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>isDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Source Code Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Char_11_12</fullName>
        <columns>NAME</columns>
        <columns>Product_Program__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Giving_Segment__c</columns>
        <columns>From_Field__c</columns>
        <columns>Char11__c</columns>
        <columns>Char12__c</columns>
        <columns>isDefault__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SourceCodeConfig__c.Char_11_12</value>
        </filters>
        <label>Char_11_12</label>
    </listViews>
    <listViews>
        <fullName>Char_1_2_3</fullName>
        <columns>NAME</columns>
        <columns>Station__c</columns>
        <columns>Char1__c</columns>
        <columns>Char2__c</columns>
        <columns>Char3__c</columns>
        <columns>isDefault__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SourceCodeConfig__c.Char_1_2_3</value>
        </filters>
        <label>Char 1_2_3</label>
    </listViews>
    <listViews>
        <fullName>Char_4</fullName>
        <columns>NAME</columns>
        <columns>Product_Program__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Char4__c</columns>
        <columns>isDefault__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SourceCodeConfig__c.Char_4</value>
        </filters>
        <label>Char_4</label>
    </listViews>
    <listViews>
        <fullName>Char_5</fullName>
        <columns>NAME</columns>
        <columns>Product_Program__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Giving_Segment__c</columns>
        <columns>Channel_Technique__c</columns>
        <columns>Sub_Channel__c</columns>
        <columns>Char5__c</columns>
        <columns>isDefault__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SourceCodeConfig__c.Char_5</value>
        </filters>
        <label>Char_5</label>
    </listViews>
    <listViews>
        <fullName>Char_6</fullName>
        <columns>NAME</columns>
        <columns>Product_Program__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Giving_Segment__c</columns>
        <columns>Channel_Technique__c</columns>
        <columns>Sub_Channel__c</columns>
        <columns>Solicitation_Type__c</columns>
        <columns>Char6__c</columns>
        <columns>isDefault__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SourceCodeConfig__c.Char_6</value>
        </filters>
        <label>Char_6</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Source Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Code Configuration</pluralLabel>
    <recordTypes>
        <fullName>Char_11_12</fullName>
        <active>true</active>
        <description>For character 11 and 12.</description>
        <label>Char_11_12</label>
    </recordTypes>
    <recordTypes>
        <fullName>Char_1_2_3</fullName>
        <active>true</active>
        <description>For character 1,2 and 3.</description>
        <label>Char_1_2_3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Char_4</fullName>
        <active>true</active>
        <description>For character 4.</description>
        <label>Char_4</label>
    </recordTypes>
    <recordTypes>
        <fullName>Char_5</fullName>
        <active>true</active>
        <description>For character 5.</description>
        <label>Char_5</label>
    </recordTypes>
    <recordTypes>
        <fullName>Char_6</fullName>
        <active>true</active>
        <description>For character 6.</description>
        <label>Char_6</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>